change to wording of two articles

--- a/_posts/information-security-report.mdx
+++ b/_posts/information-security-report.mdx
@@ -2,7 +2,7 @@
 date: '2021-11-25'
 thumbnail: /assets/information-security-merger.jpg
 title: Information security management concerns arising from the merger of two financial organisations
-description: An investigation into a hypotehtical merger
+description: An investigation into a hypothetical international merger
 
 ---
 
