--- a/_posts/wearable-technology.mdx
+++ b/_posts/wearable-technology.mdx
@@ -2,7 +2,7 @@
 date: '2021-11-25'
 thumbnail: /assets/wearable-technology.jpg
 title: Wearable Technology and the Bystander Privacy Concerns Arising from Outward-facing Cameras
-description: An investigation into the privacy concerns of bystanders in the vicinity of someone wearing smart glasses or another wearable device featuring a camera
+description: An investigation into the privacy concerns of individuals in the vicinity of wearable devices that feature cameras
 
 ---
 
